syntax = "proto3"; 

package zkp_auth;

message RegisterRequest { 
    string user = 1;
    int64 y1 = 2;
    int64 y2 = 3;
}

message InitialiseResponse {
    // Modulus of group G
    uint64 modulus = 1;
    // First generator of Group G
    uint64 g1 = 2;
    // Second generator of Group G
    uint64 g2 = 3;
    // Prime number, order of Group G
    uint64 order = 4;
}

message InitialiseRequest {}

message RegisterResponse {}

message AuthenticationChallengeRequest { 
    string user = 1;
    int64 r1 = 2;
    int64 r2 = 3;
}

message AuthenticationChallengeResponse { 
    string auth_id = 1;
    int64 c = 2;
}
message AuthenticationAnswerRequest { 
    string auth_id = 1;
    int64 s = 2;
}

message AuthenticationAnswerResponse { 
    string session_id = 1;
}
service Auth {
    rpc Initialise(InitialiseRequest) returns (InitialiseResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc CreateAuthenticationChallenge(AuthenticationChallengeRequest) returns (AuthenticationChallengeResponse) {}
    rpc VerifyAuthentication(AuthenticationAnswerRequest) returns (AuthenticationAnswerResponse) {} 
}